@@ -1,0 +1,21 @@
+# Copyright 1999-2006 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jdbc3-postgresql/Attic/jdbc3-postgresql-7.3-r1.ebuild,v 1.1 2006/09/23 12:19:46 nelchael Exp $
+
+inherit java-pkg-2
+
+At="pg73jdbc3.jar"
+S=${WORKDIR}
+DESCRIPTION="JDBC3 Driver for PostgreSQL"
+SRC_URI="http://jdbc.postgresql.org/download/${At}"
+HOMEPAGE="http://jdbc.postgresql.org/"
+KEYWORDS="~amd64 ~ppc ~sparc ~x86"
+IUSE=""
+LICENSE="POSTGRESQL"
+SLOT="1"
+DEPEND=""
+RDEPEND=">=virtual/jre-1.4"
+
+src_install() {
+	java-pkg_dojar ${DISTDIR}/${At}
+}
